Css animate svg path

--- a/pitt_loop.html
+++ b/pitt_loop.html
@@ -62,6 +62,16 @@ background-color: black;
   fill-opacity: 0;
   stroke: #fff;
   stroke-width: 2.5px;
+  stroke-dasharray: 2000;
+  stroke-dashoffset: 2000;
+  animation: dash 5s linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 .road:hover {
@@ -147,6 +157,11 @@ function ready(error, route) {
             .enter().append("path")
             .attr('class', 'road')
             .attr('stroke', '#2b8cbe')
+
+        // road_feature.transition()
+        //                 .duration(1500)
+        //                 .ease(d3.easePolyInOut)
+        //                 .attr('stroke-dashoffset', 0)
         //update_counties(filtered_counties);
 
         map.on("viewreset", reset);
