Added ugly boring link

--- a/pitt_loop.html
+++ b/pitt_loop.html
@@ -377,7 +377,10 @@ function reset() {
             <button id='race' class="button">Race</button>
             <button id='route' class="button"> Route </button>
             <button id='share' class="button">Share</button>
-            <button id='boring' class="button">The <br> Boring Company</button>
+            <a  class='button' href="https://www.boringcompany.com/faq/" target="_blank"><input type="button">
+                The <br> Boring Company
+            </a>
+            <!-- <button id='boring' class="button">The <br> Boring Company</button> -->
         </div>
         <div id='video-div'>
         <iframe id='video' width="1280" height="720" src="https://www.youtube.com/embed/tfV8z2JY_bI">
